[package]
name = "mchdir"
version = "0.3.0"
edition = "2021"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
description = "Make and enter a directory in one command."
license = "MIT"
homepage = "https://seapagan.github.io/mchdir/"
repository = "https://github.com/seapagan/mchdir"
readme = "README.md"
exclude = [".github/*", "docs/*"]
keywords = ["directory", "change", "cd", "chdir", "mkdir"]
categories = ["command-line-utilities", "filesystem"]

[package.metadata]
os = ["linux", "macos"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
rand = "0.8.5"
